--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,22 @@ debug/
 logs/*.txt
 
 # ignore gallery files
-gallery/avatars/
-gallery/avatars/thumbnails/
+gallery/avatars/*.jpg
+gallery/avatars/*.png
+gallery/avatars/*.gif
+gallery/avatars/thumbnails/*.jpg
+gallery/avatars/thumbnails/*.png
+gallery/avatars/thumbnails/*.gif
 !gallery/avatars/index.php
 !gallery/avatars/thumbnails/index.php
-gallery/uploads/
-gallery/uploads/thumbnails/
+gallery/uploads/*.jpg
+gallery/uploads/*.png
+gallery/uploads/*.gif
+gallery/uploads/thumbnails/*.jpg
+gallery/uploads/thumbnails/*.png
+gallery/uploads/thumbnails/*.gif
 !gallery/uploads/index.php
 !gallery/uploads/thumbnails/index.php
+
+# ignore gtignore file
+.gitignore
