Dark style improvement

--- a/styles/styles.cfg
+++ b/styles/styles.cfg
@@ -2,9 +2,10 @@
 name = Base
 version = 1.0.0
 author = Saikuro
-size = 2289759
+size = 2292520
 [base-dark]
 name = Base Dark
 version = 1.0.0
 author = Saikuro
-size = 2237495
+parent = base
+size = 2182429
